@@ -1,5 +1,6 @@
 
 5.2b1 -> 5.3a1
+    - jbj: rpmdigest: add --fips140 to verify Fedorable HMAC's.
     - jbj: rpmio: add fdInitHmac()/rpmHmacInit() methods for HMAC generation.
     - jbj: rpmio: stub-in the data elements needed for keyed hashes.
     - jbj: rpmio: fix: unbreak --alldigests.
